@@ -248,6 +248,9 @@ Bug Fixes
 
 27.SOLR-1229: Fixes for deletedPkQuery, particularly when using transformed Solr unique id's
               (Lance Norskog, Noble Paul via ehatcher)
+              
+28.SOLR-1286: Fix the commit parameter always defaulting to "true" even if "false" is explicitly passed in.
+              (Jay Hill, Noble Paul via ehatcher)
              
 
 Documentation
